--- a/Archived Code/volFinal.html
+++ b/Archived Code/volFinal.html
@@ -21,6 +21,23 @@
     font-size: 9px;
 }
 
+.zoneHoverShow{
+  stroke:black;
+  stroke-width:0.2px;
+}
+.zoneHoverHide {
+  fill: none;
+  stroke:black;
+  stroke-width:0.2px;
+}
+
+.textHoverShow{
+  font-size: 16px;
+}
+.textHoverHide{
+  color: red;
+}
+
 </style>
 </head>
 <body>
@@ -184,9 +201,9 @@ function drawVolatility(volatility, volLabels, volDateLabels){
   var colorDomain = yDomain
 
   //CREATING THE CANVAS AND MAKING THE SCALES
-  var containerSize = {'height': 380, 'width': 540};//d3.select('#volChartContainer').node().getBoundingClientRect()
+  var containerSize = {'height': 380, 'width': 640};//d3.select('#volChartContainer').node().getBoundingClientRect()
   var margin = {top: 0.08*containerSize.height , right: 0.006*containerSize.width, bottom: 0.08*containerSize.height, left: 0.15*containerSize.width};
-  var padding = {top: 0.006*containerSize.height, right: 0.006*containerSize.width, bottom: 0.04*containerSize.height, left: 0.06*containerSize.width};
+  var padding = {top: 0.06*containerSize.height, right: 0.006*containerSize.width, bottom: 0.04*containerSize.height, left: 0.06*containerSize.width};
   var width = containerSize.width - margin.right - margin.left; //Chart width
   var height = containerSize.height - margin.top - margin.bottom; //Chart height
 
@@ -225,8 +242,30 @@ function drawVolatility(volatility, volLabels, volDateLabels){
   //GETTING THE MEAN DATA READY
   var means = getMean(data, xScale, yScale)
 
+  //SETTING THE TOOL-TIPs AND TEXT DATA
+  var dotTip = d3.tip()
+      .attr('class', 'd3-tip')
+      .offset([14, 10])
+      .direction('e')
+      .html(function(d) {
+          return "<strong>State:</strong> <span style='color:silver'>" + d.state + "</span>" + "<br>" + 
+          "<strong>Centre:</strong> <span style='color:silver'>" + d.centre + "</span>" + "<br>" +
+          "<strong>Volatility:</strong> <span style=" + "'" + "color:" + colorScale(d.volMoving) +"'" +">" + d3.round(d.volMoving, 2) + "</span>"
+          ;
+    })
+var totMean = d3.round(d3.mean(data, function(d){return d.volMoving}), 2)
+var totObs = data.length
+console.log(totMean, totObs)
 
   //DRAWING THE ELEMENTS
+  var zoneText = volChart.append('text')
+    .text('National Mean: ' + totMean + ', Observations:' + totObs)
+    .attr({
+      x:0,
+      y:-itemNamestagger,
+    })
+    .attr('font-size', xFont+2)
+
   volChart.append('g')
     .selectAll('.volZoneLab')
     .data(volLabels)
@@ -261,6 +300,21 @@ function drawVolatility(volatility, volLabels, volDateLabels){
       .call(yAxis)
       .style('pointer-events', 'none')
 
+  var hoverRects = volChart.append('g')
+      .selectAll('.hoverRects')
+      .data(volLabels)
+      .enter()
+      .append('rect')
+      .attr({
+        x: function(d){return xScale(d.xPosition) - 1.5*dotRadius},
+        y: -dotRadius,
+        height: height + dotRadius,
+        width: 3*dotRadius
+      })
+      .attr("fill-opacity", "0")
+      .on('mouseover', mouseoverRect)
+      .on('mouseout', mouseoutRect)
+
   var dots = volChart.append('g')
       .selectAll('.volDots')
       .data(data)
@@ -275,6 +329,9 @@ function drawVolatility(volatility, volLabels, volDateLabels){
       })
       .style('stroke', 'black')
       .style('stroke-width', '0.2px')
+      .call(dotTip)
+      .on('mouseover', mouseoverDot)
+      .on('mouseout', mouseoutDot)
 
   var meanCross = volChart.append('g')
       .selectAll('.meanCross')
@@ -292,7 +349,9 @@ function drawVolatility(volatility, volLabels, volDateLabels){
       .style('alignment-baseline', 'central')
       .style('text-anchor', 'middle')
       .style('cursor', 'default')
-console.log(means[0])
+      .on('mouseover', mouseoverCross)
+      .on('mouseout', mouseoutCross)
+
   var meanLines = volChart.append('g')
       .selectAll('.meanLines')
       .data(means[0])
@@ -306,6 +365,134 @@ console.log(means[0])
         class: 'meanLines'
       })
       .style('stroke', 'black')
+
+  //ADDING AXIS LABELS
+  yAxisLine.append('text')
+      .text("Price Volatility (12 month window)")
+      .attr("text-anchor", "middle")
+      .style("font-size", '10px')
+      .attr("y", 6)
+      .attr('x', -height/2)
+      .attr("dy", "0.75em")
+      .attr("transform", "rotate(-90)")
+  
+  volChart.append('text')
+      .text("Zones")
+      .attr({
+        x: 0,
+        y: height
+      })
+      .style("font-size", '12px')
+
+  //MARKING THE NEW PRODUCT SELECTION AND CALLING THE REDRAW FUNCTION
+  d3.select('#productSelectVolatility') //changes the product based on user input from the dropdown menu
+    .on('change', function(d) {
+        var product = d3.select(this).property('value')
+        redraw(product)
+    })
+
+  //CREATING THE REDRAW FUNCTION
+  function redraw(product){
+    data = volatility.filter(function(d){return d.item === product});
+    yDomain = d3.extent(data, function(d){return d.volMoving}) //the y-axis is set to the range of volatility values
+    colorDomain = yDomain
+    yScale.domain(yDomain)
+    colorScale.domain(yDomain)
+    means = getMean(data, xScale, yScale)
+    totMean = d3.round(d3.mean(data, function(d){return d.volMoving}), 2)
+    totObs = data.length
+    zoneText.text('National Mean: ' + totMean + ', Observations:' + totObs)
+
+    yAxisLine.call(yAxis)
+    dots = dots.data(data)
+    dots.exit().remove()
+    dots.enter().append('circle')
+    dots.attr({
+      cx: function(d){return xScale(d.xPosition)},
+      cy: function(d){return yScale(d.volMoving)},
+      r:dotRadius,
+      class: 'volDots',
+      fill: function(d){return colorScale(d.volMoving)}
+    })
+
+    meanCross = meanCross.data(means[1])
+    meanCross.exit().remove()
+    meanCross.enter().append('text').text('x')
+    meanCross.attr({
+      x: function(d){return d.xPosition},
+      y: function(d){return d.meanZone},
+      class: 'meanCross'
+    })
+
+    meanLines = meanLines.data(means[0])
+    meanLines.exit().remove()
+    meanLines.enter().append('line')
+    meanLines.attr({
+      x1: function(d){return d.minX - dotRadius},
+      y1: function(d){return d.meanDate},
+      x2: function(d){return d.maxX + dotRadius},
+      y2: function(d){return d.meanDate},
+      class: 'meanLines'
+    })
+
+  }
+
+  //THE MOUSEOVER FUNCTIONS
+  d3.selection.prototype.size = function() {
+    var n = 0;
+    this.each(function() { ++n; });
+    return n;
+  };
+
+  function mouseoverRect(d){
+    var obs = d3.selectAll('.volDots').filter(function(e){return e.zoneCode === d.zoneCode}).size()
+    var mean = d3.round(d3.mean(data.filter(function(g) {return g.zoneCode === d.zoneCode}), function(z){return z.volMoving}),2)
+    zoneText.text('Zone-'+ d.zoneCode +' Mean: ' + mean + ', National Mean: ' + totMean +', Observations: '+ obs)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode === d.zoneCode}).attr({r: 1.5*dotRadius}).classed('zoneHoverShow', true)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode !== d.zoneCode}).classed('zoneHoverHide', true)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', true)
+    d3.selectAll('.meanCross').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', true)
+  }
+  function mouseoutRect(d){
+    zoneText.text('National Mean: ' + totMean + ', Observations:' + totObs)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode == d.zoneCode}).attr({r: dotRadius}).classed('zoneHoverShow', false)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode !== d.zoneCode}).classed('zoneHoverHide', false)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', false)
+    d3.selectAll('.meanCross').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', false)
+  }
+
+  function mouseoverDot(d){
+    var obs = d3.selectAll('.volDots').filter(function(e){return e.zoneCode === d.zoneCode}).size()
+    var mean = d3.round(d3.mean(data.filter(function(g) {return g.zoneCode === d.zoneCode}), function(z){return z.volMoving}),2)
+    zoneText.text('Zone-'+ d.zoneCode +' Mean: ' + mean + ', National Mean: ' + totMean +', Observations: '+ obs)
+    d3.selectAll('.volDots').filter(function(e){return e.state === d.state}).attr({r: 1.5*dotRadius}).classed('zoneHoverShow', true)
+    d3.selectAll('.volDots').filter(function(e){return e.state !== d.state}).classed('zoneHoverHide', true)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', true)
+    dotTip.show(d)
+  }
+  function mouseoutDot(d){
+    d3.selectAll('.volDots').filter(function(e){return e.state === d.state}).attr({r: dotRadius}).classed('zoneHoverShow', false)
+    d3.selectAll('.volDots').filter(function(e){return e.state !== d.state}).classed('zoneHoverHide', false)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', false)
+    dotTip.hide(d)
+  }
+
+  function mouseoverCross(d){
+    var obs = d3.selectAll('.volDots').filter(function(e){return e.zoneCode === d.zoneCode}).size()
+    var mean = d3.round(d3.mean(data.filter(function(g) {return g.zoneCode === d.zoneCode}), function(z){return z.volMoving}),2)
+    zoneText.text('Zone-'+ d.zoneCode +' Mean: ' + mean + ', National Mean: ' + totMean +', Observations: '+ obs)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode === d.zoneCode}).attr({r: 1.5*dotRadius}).classed('zoneHoverShow', true)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode !== d.zoneCode}).classed('zoneHoverHide', true)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', true)
+    d3.selectAll('.meanCross').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', true)
+  }
+  function mouseoutCross(d){
+    zoneText.text('National Mean: ' + totMean + ', Observations:' + totObs)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode == d.zoneCode}).attr({r: dotRadius}).classed('zoneHoverShow', false)
+    d3.selectAll('.volDots').filter(function(e){return e.zoneCode !== d.zoneCode}).classed('zoneHoverHide', false)
+    d3.selectAll('.volZoneLab').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', false)
+    d3.selectAll('.meanCross').filter(function(t){return t.zoneCode === d.zoneCode}).classed('textHoverShow', false)
+  }
 
 }
 
