--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ function drawHistogram(allData){
   	var histText = histChart.append('text')
     .text('Total observations: ' + totObs)
     .attr({
-      x:0,
+      x:dotChartSeparation,
       y:0,
       class: 'histText'
     })
